# provenance

./: .env.example  .gitignore  CLAUDE.md  Procfile  README.md  manage.py  mcp_server.py  mkdocs.yml  pyproject.toml
.github/workflows/: docs.yml
ai/: base.py  openai_provider.py  registry.py  text_checker.py
cli/: ai_suggest.py  arg_normalizer.py  completions.py  indexer.py  link_utils.py  main.py  paths.py  setup_django.py  text_utils.py  tools.py
cli/commands/: actions.py  ai.py  capture.py  chat.py  daily.py  docs.py  init.py  link.py  meetings.py  people.py  reading.py  search.py
core/: admin.py
core/management/commands/: import_docs.py
core/migrations/: 0001_initial.py  0002_document.py  0003_notes_fts.py  0004_reading_item.py  0005_drop_document.py
core/models/: __init__.py  action_item.py  document.py  meeting.py  person.py  reading_item.py  topic.py
core/templates/core/: graph.html
core/views/: graph.py
docs/: calendar.md  development.md  index.md  mcp.md  onboarding.md  repl.md  setup.md
docs/commands/: actions.md  ai.md  docs.md  meetings.md  people.md  reading.md  search.md
docs/reference/: dependencies.md  models.md
provenance/: settings.py  urls.py  wsgi.py
tests/: test_arg_normalizer.py  test_capture_chunk_text.py  test_import_docs_helpers.py  test_text_checker.py  test_text_utils.py
